--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4.16"
 jsonwebtoken = "8.0.1"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
-uuid = { version = "0.8.2", features = ["serde"] }
+uuid = { version = "1.1.2", features = ["v4", "serde"] }
 paperclip = { version = "0.7.0", default-features = false, features = ["actix4"], optional = true }
 
 [dev-dependencies]
